objects/Interview_Prep__c.object
<CustomObject>
    <description>Info pertaining to interview preparation for jobs</description>
    <fields>
        <fullName>Attachments_Required__c</fullName>
        <inlineHelpText>If yes, download the attachments from Notes &amp; Attachments and attach when sending the prep email.</inlineHelpText>
        <label>Attachments Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AttireJob__c</fullName>
        <formula>Job_Order__r.Attire__c</formula>
        <label>Attire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attire__c</fullName>
        <label>Attire</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Account_Manager__c</fullName>
        <formula>Job_Order__r.ts2__Recruiter__r.FirstName &amp;&quot; &quot;&amp;  Job_Order__r.ts2__Recruiter__r.LastName</formula>
        <label>Client Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Website__c</fullName>
        <formula>Job_Order__r.Client_Website__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>Job_Order__r.ts2__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_1_LinkedIn__c</fullName>
        <formula>Contact_1__r.LinkedIn_Profile__c</formula>
        <label>Contact 1 LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interview Preps</relationshipLabel>
        <relationshipName>Interview_Preps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_2_LinkedIn__c</fullName>
        <formula>Contact_2__r.LinkedIn_Profile__c</formula>
        <label>Contact 2 LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interview Preps (Contact 2)</relationshipLabel>
        <relationshipName>Interview_Preps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_3_LinkedIn__c</fullName>
        <formula>Contact_3__r.LinkedIn_Profile__c</formula>
        <label>Contact 3 LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interview Preps (Contact 3)</relationshipLabel>
        <relationshipName>Interview_Preps2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Round__c</fullName>
        <label>Prep Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client In Person 1st</fullName>
                </value>
                <value>
                    <fullName>Client In Person 2nd</fullName>
                </value>
                <value>
                    <fullName>Client In Person 3rd</fullName>
                </value>
                <value>
                    <fullName>Client In Person Final</fullName>
                </value>
                <value>
                    <fullName>Client Phone Interview 1st</fullName>
                </value>
                <value>
                    <fullName>Client Phone Interview 2nd</fullName>
                </value>
                <value>
                    <fullName>Client Video Interview</fullName>
                </value>
                <value>
                    <fullName>Happy Hour</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_specific_Details__c</fullName>
        <inlineHelpText>Details specific to this stage of the interview process.</inlineHelpText>
        <label>Interview-specific Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <label>Job Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ts2__Job__c.ts2__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ts2__Job__c</referenceTo>
        <relationshipName>Job_Preps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>Job_Order__r.Name</formula>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prep_Details__c</fullName>
        <label>Prep Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prep_Status__c</fullName>
        <label>Prep Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>See Job Mgr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Interview_Instructions__c</fullName>
        <inlineHelpText>How should the candidate dial into the video interview or contact the interviewer?</inlineHelpText>
        <label>Video Interview Instructions</label>
        <type>TextArea</type>
    </fields>
    <label>Interview Prep</label>
    <nameField>
        <displayFormat>IP{000000}</displayFormat>
        <label>Interview Prep</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Preps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>